parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON altprogram
Rule 2     altprogram -> class altprogram
Rule 3     altprogram -> var altprogram
Rule 4     altprogram -> function altprogram
Rule 5     altprogram -> main
Rule 6     main -> MAIN OPENPAREN CLOSEPAREN OPENCURLY altmain
Rule 7     altmain -> var altmain
Rule 8     altmain -> estatuto altmain
Rule 9     altmain -> CLOSECURLY
Rule 10    class -> CLASS ID altclass OPENCURLY alt2class
Rule 11    altclass -> TWODOTS ID
Rule 12    altclass -> empty
Rule 13    alt2class -> var alt2class
Rule 14    alt2class -> function alt2class
Rule 15    alt2class -> constructor CLOSECURLY SEMICOLON
Rule 16    constructor -> CONSTRUCTOR OPENPAREN altconst CLOSEPAREN OPENCURLY alt2const
Rule 17    altconst -> params altconst
Rule 18    altconst -> empty
Rule 19    alt2const -> var alt2const
Rule 20    alt2const -> estatuto alt2const
Rule 21    alt2const -> CLOSECURLY
Rule 22    var -> VAR listids TWODOTS type SEMICOLON
Rule 23    listids -> ID listidsalty
Rule 24    listidsalty -> COMMA listids
Rule 25    listidsalty -> OPENBRACKET CTEINT CLOSEBRACKET listidsaltz
Rule 26    listidsalty -> empty
Rule 27    listidsaltz -> COMMA listids
Rule 28    listidsaltz -> OPENBRACKET CTEINT CLOSEBRACKET listidsaltp
Rule 29    listidsaltz -> empty
Rule 30    listidsaltp -> COMMA listids
Rule 31    listidsaltp -> empty
Rule 32    function -> FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
Rule 33    altfunc -> params
Rule 34    altfunc -> empty
Rule 35    alt2func -> TWODOTS type
Rule 36    alt2func -> empty
Rule 37    alt3func -> var alt3func
Rule 38    alt3func -> estatuto alt3func
Rule 39    alt3func -> CLOSECURLY
Rule 40    params -> ID TWODOTS type altparams
Rule 41    altparams -> COMMA ID TWODOTS type altparams
Rule 42    altparams -> empty
Rule 43    callfunc -> ID OPENPAREN altcall CLOSEPAREN
Rule 44    altcall -> expresion alt2call
Rule 45    altcall -> empty
Rule 46    alt2call -> COMMA altcall
Rule 47    alt2call -> empty
Rule 48    type -> INT
Rule 49    type -> FLOAT
Rule 50    type -> STRING
Rule 51    type -> ID
Rule 52    type -> BOOL
Rule 53    estatuto -> assign
Rule 54    estatuto -> condition
Rule 55    estatuto -> write
Rule 56    estatuto -> read
Rule 57    estatuto -> return
Rule 58    estatuto -> voidcall
Rule 59    estatuto -> while
Rule 60    voidcall -> ID OPENPAREN CLOSEPAREN
Rule 61    voidcall -> ID OPENPAREN expresion altcall
Rule 62    altcall -> COMMA expresion altcall
Rule 63    altcall -> CLOSEPAREN SEMICOLON
Rule 64    while -> WHILE OPENPAREN expresion CLOSEPAREN OPENCURLY altwhile
Rule 65    altwhile -> estatuto altwhile
Rule 66    altwhile -> CLOSECURLY
Rule 67    varcall -> varcte
Rule 68    varcall -> varcomplicated
Rule 69    varcte -> TRUE
Rule 70    varcte -> FALSE
Rule 71    varcte -> CTEFLOAT
Rule 72    varcte -> CTESTRING
Rule 73    varcte -> CTEINT
Rule 74    varcomplicated -> varcomp1
Rule 75    varcomplicated -> callfunc
Rule 76    varcomp1 -> ID varcomp2
Rule 77    varcomp2 -> DOT varcomp3
Rule 78    varcomp2 -> empty
Rule 79    varcomp3 -> varcomp1
Rule 80    varcomp3 -> callfunc
Rule 81    expresion -> exp altexpresion
Rule 82    altexpresion -> altexpresion2 exp
Rule 83    altexpresion -> empty
Rule 84    altexpresion2 -> SAMEAS
Rule 85    altexpresion2 -> BIGGERTHAN
Rule 86    altexpresion2 -> BIGGEREQUALSTHAN
Rule 87    altexpresion2 -> SMALLTHAN
Rule 88    altexpresion2 -> SMALLEQUALSTHAN
Rule 89    altexpresion2 -> DIFFERENTTHAN
Rule 90    altexpresion2 -> AND
Rule 91    altexpresion2 -> OR
Rule 92    exp -> termino
Rule 93    exp -> termino altexp
Rule 94    altexp -> SUM termino altexp
Rule 95    altexp -> SUBTRACT termino altexp
Rule 96    altexp -> empty
Rule 97    termino -> factor
Rule 98    termino -> factor alttermino
Rule 99    alttermino -> TIMES factor alttermino
Rule 100   alttermino -> DIV factor alttermino
Rule 101   alttermino -> empty
Rule 102   read -> INPUT OPENPAREN ID CLOSEPAREN SEMICOLON
Rule 103   write -> OUTPUT OPENPAREN varcall altwrite
Rule 104   write -> OUTPUT OPENPAREN expresion altwrite
Rule 105   altwrite -> COMMA varcall altwrite
Rule 106   altwrite -> COMMA expresion altwrite
Rule 107   altwrite -> CLOSEPAREN SEMICOLON
Rule 108   factor -> OPENPAREN expresion CLOSEPAREN
Rule 109   factor -> SUM varcall
Rule 110   factor -> SUBTRACT varcall
Rule 111   factor -> varcall
Rule 112   condition -> IF OPENPAREN expresion CLOSEPAREN OPENCURLY altcondition
Rule 113   condition -> IF OPENPAREN expresion CLOSEPAREN OPENCURLY altcondition ELSE OPENCURLY altcondition
Rule 114   altcondition -> estatuto altcondition
Rule 115   altcondition -> CLOSECURLY
Rule 116   assign -> ID assign1 EQUALS expresion SEMICOLON
Rule 117   assign1 -> DOT ID assign1
Rule 118   assign1 -> empty
Rule 119   return -> RETURN expresion SEMICOLON
Rule 120   empty -> <empty>

Terminals, with rules where they appear

AND                  : 90
BIGGEREQUALSTHAN     : 86
BIGGERTHAN           : 85
BOOL                 : 52
CLASS                : 10
CLOSEBRACKET         : 25 28
CLOSECURLY           : 9 15 21 39 66 115
CLOSEPAREN           : 6 16 32 43 60 63 64 102 107 108 112 113
COMMA                : 24 27 30 41 46 62 105 106
CONSTRUCTOR          : 16
CTEFLOAT             : 71
CTEINT               : 25 28 73
CTESTRING            : 72
DIFFERENTTHAN        : 89
DIV                  : 100
DOT                  : 77 117
ELSE                 : 113
EQUALS               : 116
FALSE                : 70
FLOAT                : 49
FUNC                 : 32
ID                   : 1 10 11 23 32 40 41 43 51 60 61 76 102 116 117
IF                   : 112 113
INPUT                : 102
INT                  : 48
MAIN                 : 6
OPENBRACKET          : 25 28
OPENCURLY            : 6 10 16 32 64 112 113 113
OPENPAREN            : 6 16 32 43 60 61 64 102 103 104 108 112 113
OR                   : 91
OUTPUT               : 103 104
PROGRAM              : 1
RETURN               : 119
SAMEAS               : 84
SEMICOLON            : 1 15 22 63 102 107 116 119
SMALLEQUALSTHAN      : 88
SMALLTHAN            : 87
STRING               : 50
SUBTRACT             : 95 110
SUM                  : 94 109
TIMES                : 99
TRUE                 : 69
TWODOTS              : 11 22 35 40 41
VAR                  : 22
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

alt2call             : 44
alt2class            : 10 13 14
alt2const            : 16 19 20
alt2func             : 32
alt3func             : 32 37 38
altcall              : 43 46 61 62
altclass             : 10
altcondition         : 112 113 113 114
altconst             : 16 17
altexp               : 93 94 95
altexpresion         : 81
altexpresion2        : 82
altfunc              : 32
altmain              : 6 7 8
altparams            : 40 41
altprogram           : 1 2 3 4
alttermino           : 98 99 100
altwhile             : 64 65
altwrite             : 103 104 105 106
assign               : 53
assign1              : 116 117
callfunc             : 75 80
class                : 2
condition            : 54
constructor          : 15
empty                : 12 18 26 29 31 34 36 42 45 47 78 83 96 101 118
estatuto             : 8 20 38 65 114
exp                  : 81 82
expresion            : 44 61 62 64 104 106 108 112 113 116 119
factor               : 97 98 99 100
function             : 4 14
listids              : 22 24 27 30
listidsaltp          : 28
listidsalty          : 23
listidsaltz          : 25
main                 : 5
params               : 17 33
program              : 0
read                 : 56
return               : 57
termino              : 92 93 94 95
type                 : 22 35 40 41
var                  : 3 7 13 19 37
varcall              : 103 105 109 110 111
varcomp1             : 74 79
varcomp2             : 76
varcomp3             : 77
varcomplicated       : 68
varcte               : 67
voidcall             : 58
while                : 59
write                : 55

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON altprogram

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON altprogram

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON altprogram

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main
    (10) class -> . CLASS ID altclass OPENCURLY alt2class
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (32) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (6) main -> . MAIN OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 10
    VAR             shift and go to state 11
    FUNC            shift and go to state 12
    MAIN            shift and go to state 13

    altprogram                     shift and go to state 5
    class                          shift and go to state 6
    var                            shift and go to state 7
    function                       shift and go to state 8
    main                           shift and go to state 9

state 5

    (1) program -> PROGRAM ID SEMICOLON altprogram .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON altprogram .)


state 6

    (2) altprogram -> class . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main
    (10) class -> . CLASS ID altclass OPENCURLY alt2class
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (32) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (6) main -> . MAIN OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 10
    VAR             shift and go to state 11
    FUNC            shift and go to state 12
    MAIN            shift and go to state 13

    class                          shift and go to state 6
    altprogram                     shift and go to state 14
    var                            shift and go to state 7
    function                       shift and go to state 8
    main                           shift and go to state 9

state 7

    (3) altprogram -> var . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main
    (10) class -> . CLASS ID altclass OPENCURLY alt2class
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (32) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (6) main -> . MAIN OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 10
    VAR             shift and go to state 11
    FUNC            shift and go to state 12
    MAIN            shift and go to state 13

    var                            shift and go to state 7
    altprogram                     shift and go to state 15
    class                          shift and go to state 6
    function                       shift and go to state 8
    main                           shift and go to state 9

state 8

    (4) altprogram -> function . altprogram
    (2) altprogram -> . class altprogram
    (3) altprogram -> . var altprogram
    (4) altprogram -> . function altprogram
    (5) altprogram -> . main
    (10) class -> . CLASS ID altclass OPENCURLY alt2class
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (32) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (6) main -> . MAIN OPENPAREN CLOSEPAREN OPENCURLY altmain

    CLASS           shift and go to state 10
    VAR             shift and go to state 11
    FUNC            shift and go to state 12
    MAIN            shift and go to state 13

    function                       shift and go to state 8
    altprogram                     shift and go to state 16
    class                          shift and go to state 6
    var                            shift and go to state 7
    main                           shift and go to state 9

state 9

    (5) altprogram -> main .

    $end            reduce using rule 5 (altprogram -> main .)


state 10

    (10) class -> CLASS . ID altclass OPENCURLY alt2class

    ID              shift and go to state 17


state 11

    (22) var -> VAR . listids TWODOTS type SEMICOLON
    (23) listids -> . ID listidsalty

    ID              shift and go to state 19

    listids                        shift and go to state 18

state 12

    (32) function -> FUNC . ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func

    ID              shift and go to state 20


state 13

    (6) main -> MAIN . OPENPAREN CLOSEPAREN OPENCURLY altmain

    OPENPAREN       shift and go to state 21


state 14

    (2) altprogram -> class altprogram .

    $end            reduce using rule 2 (altprogram -> class altprogram .)


state 15

    (3) altprogram -> var altprogram .

    $end            reduce using rule 3 (altprogram -> var altprogram .)


state 16

    (4) altprogram -> function altprogram .

    $end            reduce using rule 4 (altprogram -> function altprogram .)


state 17

    (10) class -> CLASS ID . altclass OPENCURLY alt2class
    (11) altclass -> . TWODOTS ID
    (12) altclass -> . empty
    (120) empty -> .

    TWODOTS         shift and go to state 23
    OPENCURLY       reduce using rule 120 (empty -> .)

    altclass                       shift and go to state 22
    empty                          shift and go to state 24

state 18

    (22) var -> VAR listids . TWODOTS type SEMICOLON

    TWODOTS         shift and go to state 25


state 19

    (23) listids -> ID . listidsalty
    (24) listidsalty -> . COMMA listids
    (25) listidsalty -> . OPENBRACKET CTEINT CLOSEBRACKET listidsaltz
    (26) listidsalty -> . empty
    (120) empty -> .

    COMMA           shift and go to state 27
    OPENBRACKET     shift and go to state 28
    TWODOTS         reduce using rule 120 (empty -> .)

    listidsalty                    shift and go to state 26
    empty                          shift and go to state 29

state 20

    (32) function -> FUNC ID . OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func

    OPENPAREN       shift and go to state 30


state 21

    (6) main -> MAIN OPENPAREN . CLOSEPAREN OPENCURLY altmain

    CLOSEPAREN      shift and go to state 31


state 22

    (10) class -> CLASS ID altclass . OPENCURLY alt2class

    OPENCURLY       shift and go to state 32


state 23

    (11) altclass -> TWODOTS . ID

    ID              shift and go to state 33


state 24

    (12) altclass -> empty .

    OPENCURLY       reduce using rule 12 (altclass -> empty .)


state 25

    (22) var -> VAR listids TWODOTS . type SEMICOLON
    (48) type -> . INT
    (49) type -> . FLOAT
    (50) type -> . STRING
    (51) type -> . ID
    (52) type -> . BOOL

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    STRING          shift and go to state 37
    ID              shift and go to state 38
    BOOL            shift and go to state 39

    type                           shift and go to state 34

state 26

    (23) listids -> ID listidsalty .

    TWODOTS         reduce using rule 23 (listids -> ID listidsalty .)


state 27

    (24) listidsalty -> COMMA . listids
    (23) listids -> . ID listidsalty

    ID              shift and go to state 19

    listids                        shift and go to state 40

state 28

    (25) listidsalty -> OPENBRACKET . CTEINT CLOSEBRACKET listidsaltz

    CTEINT          shift and go to state 41


state 29

    (26) listidsalty -> empty .

    TWODOTS         reduce using rule 26 (listidsalty -> empty .)


state 30

    (32) function -> FUNC ID OPENPAREN . altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (33) altfunc -> . params
    (34) altfunc -> . empty
    (40) params -> . ID TWODOTS type altparams
    (120) empty -> .

    ID              shift and go to state 42
    CLOSEPAREN      reduce using rule 120 (empty -> .)

    altfunc                        shift and go to state 43
    params                         shift and go to state 44
    empty                          shift and go to state 45

state 31

    (6) main -> MAIN OPENPAREN CLOSEPAREN . OPENCURLY altmain

    OPENCURLY       shift and go to state 46


state 32

    (10) class -> CLASS ID altclass OPENCURLY . alt2class
    (13) alt2class -> . var alt2class
    (14) alt2class -> . function alt2class
    (15) alt2class -> . constructor CLOSECURLY SEMICOLON
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (32) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (16) constructor -> . CONSTRUCTOR OPENPAREN altconst CLOSEPAREN OPENCURLY alt2const

    VAR             shift and go to state 11
    FUNC            shift and go to state 12
    CONSTRUCTOR     shift and go to state 51

    alt2class                      shift and go to state 47
    var                            shift and go to state 48
    function                       shift and go to state 49
    constructor                    shift and go to state 50

state 33

    (11) altclass -> TWODOTS ID .

    OPENCURLY       reduce using rule 11 (altclass -> TWODOTS ID .)


state 34

    (22) var -> VAR listids TWODOTS type . SEMICOLON

    SEMICOLON       shift and go to state 52


state 35

    (48) type -> INT .

    SEMICOLON       reduce using rule 48 (type -> INT .)
    COMMA           reduce using rule 48 (type -> INT .)
    CLOSEPAREN      reduce using rule 48 (type -> INT .)
    ID              reduce using rule 48 (type -> INT .)
    OPENCURLY       reduce using rule 48 (type -> INT .)


state 36

    (49) type -> FLOAT .

    SEMICOLON       reduce using rule 49 (type -> FLOAT .)
    COMMA           reduce using rule 49 (type -> FLOAT .)
    CLOSEPAREN      reduce using rule 49 (type -> FLOAT .)
    ID              reduce using rule 49 (type -> FLOAT .)
    OPENCURLY       reduce using rule 49 (type -> FLOAT .)


state 37

    (50) type -> STRING .

    SEMICOLON       reduce using rule 50 (type -> STRING .)
    COMMA           reduce using rule 50 (type -> STRING .)
    CLOSEPAREN      reduce using rule 50 (type -> STRING .)
    ID              reduce using rule 50 (type -> STRING .)
    OPENCURLY       reduce using rule 50 (type -> STRING .)


state 38

    (51) type -> ID .

    SEMICOLON       reduce using rule 51 (type -> ID .)
    COMMA           reduce using rule 51 (type -> ID .)
    CLOSEPAREN      reduce using rule 51 (type -> ID .)
    ID              reduce using rule 51 (type -> ID .)
    OPENCURLY       reduce using rule 51 (type -> ID .)


state 39

    (52) type -> BOOL .

    SEMICOLON       reduce using rule 52 (type -> BOOL .)
    COMMA           reduce using rule 52 (type -> BOOL .)
    CLOSEPAREN      reduce using rule 52 (type -> BOOL .)
    ID              reduce using rule 52 (type -> BOOL .)
    OPENCURLY       reduce using rule 52 (type -> BOOL .)


state 40

    (24) listidsalty -> COMMA listids .

    TWODOTS         reduce using rule 24 (listidsalty -> COMMA listids .)


state 41

    (25) listidsalty -> OPENBRACKET CTEINT . CLOSEBRACKET listidsaltz

    CLOSEBRACKET    shift and go to state 53


state 42

    (40) params -> ID . TWODOTS type altparams

    TWODOTS         shift and go to state 54


state 43

    (32) function -> FUNC ID OPENPAREN altfunc . CLOSEPAREN alt2func OPENCURLY alt3func

    CLOSEPAREN      shift and go to state 55


state 44

    (33) altfunc -> params .

    CLOSEPAREN      reduce using rule 33 (altfunc -> params .)


state 45

    (34) altfunc -> empty .

    CLOSEPAREN      reduce using rule 34 (altfunc -> empty .)


state 46

    (6) main -> MAIN OPENPAREN CLOSEPAREN OPENCURLY . altmain
    (7) altmain -> . var altmain
    (8) altmain -> . estatuto altmain
    (9) altmain -> . CLOSECURLY
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (53) estatuto -> . assign
    (54) estatuto -> . condition
    (55) estatuto -> . write
    (56) estatuto -> . read
    (57) estatuto -> . return
    (58) estatuto -> . voidcall
    (59) estatuto -> . while
    (116) assign -> . ID assign1 EQUALS expresion SEMICOLON
    (112) condition -> . IF OPENPAREN expresion CLOSEPAREN OPENCURLY altcondition
    (113) condition -> . IF OPENPAREN expresion CLOSEPAREN OPENCURLY altcondition ELSE OPENCURLY altcondition
    (103) write -> . OUTPUT OPENPAREN varcall altwrite
    (104) write -> . OUTPUT OPENPAREN expresion altwrite
    (102) read -> . INPUT OPENPAREN ID CLOSEPAREN SEMICOLON
    (119) return -> . RETURN expresion SEMICOLON
    (60) voidcall -> . ID OPENPAREN CLOSEPAREN
    (61) voidcall -> . ID OPENPAREN expresion altcall
    (64) while -> . WHILE OPENPAREN expresion CLOSEPAREN OPENCURLY altwhile

    CLOSECURLY      shift and go to state 59
    VAR             shift and go to state 11
    ID              shift and go to state 67
    IF              shift and go to state 68
    OUTPUT          shift and go to state 69
    INPUT           shift and go to state 70
    RETURN          shift and go to state 71
    WHILE           shift and go to state 72

    altmain                        shift and go to state 56
    var                            shift and go to state 57
    estatuto                       shift and go to state 58
    assign                         shift and go to state 60
    condition                      shift and go to state 61
    write                          shift and go to state 62
    read                           shift and go to state 63
    return                         shift and go to state 64
    voidcall                       shift and go to state 65
    while                          shift and go to state 66

state 47

    (10) class -> CLASS ID altclass OPENCURLY alt2class .

    CLASS           reduce using rule 10 (class -> CLASS ID altclass OPENCURLY alt2class .)
    VAR             reduce using rule 10 (class -> CLASS ID altclass OPENCURLY alt2class .)
    FUNC            reduce using rule 10 (class -> CLASS ID altclass OPENCURLY alt2class .)
    MAIN            reduce using rule 10 (class -> CLASS ID altclass OPENCURLY alt2class .)


state 48

    (13) alt2class -> var . alt2class
    (13) alt2class -> . var alt2class
    (14) alt2class -> . function alt2class
    (15) alt2class -> . constructor CLOSECURLY SEMICOLON
    (22) var -> . VAR listids TWODOTS type SEMICOLON
    (32) function -> . FUNC ID OPENPAREN altfunc CLOSEPAREN alt2func OPENCURLY alt3func
    (16) constructor -> . CONSTRUCTOR OPENPAREN altconst CLOSEPAREN OPENCURLY alt2const

    VAR             shift and go to state 11
    FUNC            shift and go to state 12
    CONSTRUCTOR     shift and go to state 51
